2013-03-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Don't presume backup env var for all connection options.

	PostgreSQL 9.1 no longer supports a backup env var for every
	connection option.  This results in a segfault under NetBSD.
	Reported by Greg Troxel.

	* libpq.c (pg_conndefaults): Use ‘#f’ for options w/o ‘envvar’.

2013-03-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.45 (tag v0.45)

2012-12-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Avoid overlarge ‘char-set:full’.

	* postgres-qcons.scm: Import SRFI 14 ‘ucs-range->char-set’.
	(string-xrep): If ‘char-set:full’ has more than 256 elements.
	construct and use the charset [0,255], in its place.

2012-04-29  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: RETURN_TRUE

	* gi.h (RETURN_TRUE): New macro.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.44 (tag v0.44)

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Correctly handle ‘async?’ to ‘pg-get-copy-data’.

	* libpq.c (pg_get_copy_data): Use ‘TRUE_ENOUGH’ for ‘asyncp’.

2012-04-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Add abstraction: TRUE_ENOUGH

	* libpq.c (TRUE_ENOUGH): New macro.
	(pg_getlineasync, pg_notifies): Use ‘TRUE_ENOUGH’.

2012-02-06  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Release: 0.43 (tag v0.43)

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[col-defs] Relax column name lexical rules to disallow whitespace only.

	* postgres-col-defs.scm (validate-def):
	Don't check for ‘char-alphabetic?’, ‘char-numeric?’ or ‘#\_’;
	instead, check only that the character is not whitespace.

2012-02-05  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘string-xrep’ more.

	* postgres-qcons.scm (idquote from): New proc.
	(idquote xsub): Likewise.
	(idquote): Use ‘from’, ‘xsub’, ‘string-xrep’.
	(make-SELECT/COLS-tree): Use ‘string-xrep’.
	* postgres-table.scm: Import ‘string-xrep’.
	(pgtable-manager symbol->qstring): Use ‘string-xrep’.
	(pgtable-manager): Likewise.
